<resources>
    <string name="app_name">FoOdering</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favorite restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="frequently_asked_question">Frequently Asked Question</string>
    <string name="all_restaurants">All Restaurants</string>

</resources>