<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homee"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite_restaurants" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="Order History" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>